评论栏功能修补

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -139,9 +139,10 @@ layout: default
 <!-- disqus 公共JS代码 end -->
 {% endif %}
 
+<!-- Git评论栏代码 -->
 <div id="gitmentContainer"></div>
-<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+<link rel="stylesheet" href="https://jjeejj.github.io/css/gitment.css">
+<script src="https://www.wenjunjiang.win/js/gitment.js"></script>
 <script>
 var gitment = new Gitment({
     owner: '835066087',
