第三次提交评论栏修改

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -145,6 +145,7 @@ layout: default
 <script src="https://www.wenjunjiang.win/js/gitment.js"></script>
 <script>
 var gitment = new Gitment({
+    id: '{{ page.date }}',
     owner: '835066087',
     repo: 'Comment_Repo',
     oauth: {
