--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -139,7 +139,28 @@ layout: default
 <!-- disqus 公共JS代码 end -->
 {% endif %}
 
+<!-- 来必力City版安装代码 -->
+<div id="lv-container" data-id="city" data-uid="MTAyMC80NTg4NS8yMjM5Ng==">
+    <script type="text/javascript">
+   (function(d, s) {
+       var j, e = d.getElementsByTagName(s)[0];
+
+       if (typeof LivereTower === 'function') { return; }
+
+       j = d.createElement(s);
+       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+       j.async = true;
+
+       e.parentNode.insertBefore(j, e);
+   })(document, 'script');
+    </script>
+<noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
+</div>
+<!-- City版安装代码已完成 -->
+
+
 <!-- Git评论栏代码 -->
+<!--
 <div id="gitmentContainer"></div>
 <link rel="stylesheet" href="https://jjeejj.github.io/css/gitment.css">
 <script src="https://www.wenjunjiang.win/js/gitment.js"></script>
@@ -155,7 +176,7 @@ var gitment = new Gitment({
 });
 gitment.render('gitmentContainer');
 </script>
-
+-->
 
 {% if site.anchorjs %}
 <!-- async load function -->
